# sloteProbe-rust-version

./: Cargo.toml  map.md  note.md  storage_layout.json  t2.json  today.md  v1.md
src/: 2week_build_plan.md  learn.rs  main.rs  re.rs
src/clap_/: advanceTrait.rs  basics.rs  cli.rs  itterators.rs  l.rs  multi.rs  serde.rs  subCmd.rs  validator.rs
src/core/: mod.rs
src/core/artifact_parser/: foundry.rs  mod.rs  types.rs
