[package]
name = "slotprobe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
alloy = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4"
comfy-table = "7"
anyhow = "1"
thiserror = "2"
handlebars = "6"